Dart/testData/highlighting/PathsWithSpaces.dart
import <weak_warning descr="Unused import">'package:pack name/pack file.dart'</weak_warning>;
import <weak_warning descr="Unused import">'other file.dart'</weak_warning>;
import <error descr="Target of URI does not exist: 'incorrect file.dart'">'incorrect file.dart'</error>;
